# conversation-search

./: .gitignore  .mcp.json  README.md  conversation_search.py  pyproject.toml
ai-docs/features/: DAEMON-LOGFILE.md  PACKAGING-UVX.md  ZOMBIE-DAEMON-PROCESS.md
docs/plans/: 2026-02-22-daemon-mode.md
docs/reports/: 2026-02-22-connect-sse-error.md
specs/: conversation-search-mcp.md
tests/: test_fts5_index.py
